human-intervention-logs/jakarta.security.enterprise:jakarta.security.enterprise-api:4.0.0/gradle-test/gradle-test-2026-06-06T22-43-49-317145Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: jakarta.security.enterprise:jakarta.security.enterprise-api:4.0.0
Command: `/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6727-562ba44c/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 1 incompatible Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :jar
> Task :checkTestTimeoutAnnotations
> Task :processTestResources NO-SOURCE
> Task :tck-test-support:compileJava
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes
> Task :tck-test-support:jar

> Task :compileTestJava FAILED
/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6727-562ba44c/tests/src/jakarta.security.enterprise/jakarta.security.enterprise-api/4.0.0/src/test/java/jakarta_security_enterprise/jakarta_security_enterprise_api/Jakarta_security_enterprise_apiTest.java:49: error: cannot find symbol
import jakarta.security.enterprise.identitystore.IdentityStorePermission;
                                                ^
  symbol:   class IdentityStorePermission
  location: package jakarta.security.enterprise.identitystore
/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6727-562ba44c/tests/src/jakarta.security.enterprise/jakarta.security.enterprise-api/4.0.0/src/test/java/jakarta_security_enterprise/jakarta_security_enterprise_api/Jakarta_security_enterprise_apiTest.java:285: error: cannot find symbol
        IdentityStorePermission wildcard = new IdentityStorePermission("*");
        ^
  symbol:   class IdentityStorePermission
  location: class Jakarta_security_enterprise_apiTest
/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6727-562ba44c/tests/src/jakarta.security.enterprise/jakarta.security.enterprise-api/4.0.0/src/test/java/jakarta_security_enterprise/jakarta_security_enterprise_api/Jakarta_security_enterprise_apiTest.java:285: error: cannot find symbol
        IdentityStorePermission wildcard = new IdentityStorePermission("*");
                                               ^
  symbol:   class IdentityStorePermission
  location: class Jakarta_security_enterprise_apiTest
/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6727-562ba44c/tests/src/jakarta.security.enterprise/jakarta.security.enterprise-api/4.0.0/src/test/java/jakarta_security_enterprise/jakarta_security_enterprise_api/Jakarta_security_enterprise_apiTest.java:286: error: cannot find symbol
        IdentityStorePermission validate = new IdentityStorePermission("validate", "ignored-actions");
        ^
  symbol:   class IdentityStorePermission
  location: class Jakarta_security_enterprise_apiTest
/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6727-562ba44c/tests/src/jakarta.security.enterprise/jakarta.security.enterprise-api/4.0.0/src/test/java/jakarta_security_enterprise/jakarta_security_enterprise_api/Jakarta_security_enterprise_apiTest.java:286: error: cannot find symbol
        IdentityStorePermission validate = new IdentityStorePermission("validate", "ignored-actions");
                                               ^
  symbol:   class IdentityStorePermission
  location: class Jakarta_security_enterprise_apiTest
5 errors

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6727-562ba44c/tests/src/jakarta.security.enterprise/jakarta.security.enterprise-api/4.0.0/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6727-562ba44c/tests/src/jakarta.security.enterprise/jakarta.security.enterprise-api/4.0.0/src/test/java/jakarta_security_enterprise/jakarta_security_enterprise_api/Jakarta_security_enterprise_apiTest.java:49: error: cannot find symbol
  import jakarta.security.enterprise.identitystore.IdentityStorePermission;
                                                  ^
    symbol:   class IdentityStorePermission
    location: package jakarta.security.enterprise.identitystore
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6727-562ba44c/tests/src/jakarta.security.enterprise/jakarta.security.enterprise-api/4.0.0/src/test/java/jakarta_security_enterprise/jakarta_security_enterprise_api/Jakarta_security_enterprise_apiTest.java:285: error: cannot find symbol
          IdentityStorePermission wildcard = new IdentityStorePermission("*");
          ^
    symbol:   class IdentityStorePermission
    location: class Jakarta_security_enterprise_apiTest
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6727-562ba44c/tests/src/jakarta.security.enterprise/jakarta.security.enterprise-api/4.0.0/src/test/java/jakarta_security_enterprise/jakarta_security_enterprise_api/Jakarta_security_enterprise_apiTest.java:285: error: cannot find symbol
          IdentityStorePermission wildcard = new IdentityStorePermission("*");
                                                 ^
    symbol:   class IdentityStorePermission
    location: class Jakarta_security_enterprise_apiTest
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6727-562ba44c/tests/src/jakarta.security.enterprise/jakarta.security.enterprise-api/4.0.0/src/test/java/jakarta_security_enterprise/jakarta_security_enterprise_api/Jakarta_security_enterprise_apiTest.java:286: error: cannot find symbol
          IdentityStorePermission validate = new IdentityStorePermission("validate", "ignored-actions");
          ^
    symbol:   class IdentityStorePermission
    location: class Jakarta_security_enterprise_apiTest
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6727-562ba44c/tests/src/jakarta.security.enterprise/jakarta.security.enterprise-api/4.0.0/src/test/java/jakarta_security_enterprise/jakarta_security_enterprise_api/Jakarta_security_enterprise_apiTest.java:286: error: cannot find symbol
          IdentityStorePermission validate = new IdentityStorePermission("validate", "ignored-actions");
                                                 ^
    symbol:   class IdentityStorePermission
    location: class Jakarta_security_enterprise_apiTest
  5 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 5s
13 actionable tasks: 5 executed, 8 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6727-562ba44c/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for jakarta.security.enterprise:jakarta.security.enterprise-api:4.0.0 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 6s
9 actionable tasks: 1 executed, 8 up-to-date
